<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Encoge tu factura</string>
    <string name="app_version">1.0.10</string>

    <string name="summary_logo_description">Logotipo de Simyo</string>
    <string name="summary_menu_previous_period">Periodo Anterior</string>
    <string name="summary_menu_following_period">Periodo Siguiente</string>
    <string name="summary_call">Llama gratis y hazte de simyo</string>
    <string name="summary_plan_detail">Información de tarifas</string>
    <string name="summary_line_arrow_description">Ir al detalle de consumos</string>
    <string name="summary_calculating">calculando&#8230;</string>
    
    <string name="plan_detail_title">Detalle de consumos</string>
    <string name="plan_detail_purchase">Llama gratis y contrátala</string>
    <string name="plan_month_fee">Cuota mensual</string>
    <string name="plan_minimum_month_fee">Diferencia consumo mínimo</string>
    <string name="plan_registered_calls_sms">Llamadas/SMS registrados en el terminal</string>
    <string name="plan_billingperiod">Periodo de facturación:</string>
	<string name="plan_data">Consumo de Datos</string>    
    <string name="plan_type_icon_description">Tipo de consumo</string>

    <string name="planinfo_web">Entra en simyo.es</string>
    <string name="planinfo_pura">Tarifa Pura</string>
    <string name="planinfo_pura_detail">
    <![CDATA[
	<ul>
		<li class="detalles"><span style="color:#ff5900">9,68 cent/min</span> llamadas a m&oacute;viles y fijos nacionales</li>
		<li class="detalles"><span style="color:#ff5900">0 cent</span> establecimiento de llamada</li>
		<li class="detalles">Internet M&oacute;vil <span style="color:#ff5900">0,97 cent/MB</span></li>
		<li class="detalles"><span style="color:#ff5900">10,89 cent/SMS</span> mensaje de texto nacional</li>
		<li class="detalles"><span style="color:#ff5900">47,19 cent/MMS</span> mensaje multimedia nacional</li>
		<li class="detalles">12,09&euro;/mes de consumo m&iacute;nimo</li>
		<li class="detalles">Sin compromiso de permanencia</li>
		<li class="detalles">Precios IVA incluido</li>
	</ul>
    ]]>
    </string>
    <string name="planinfo_5cents">Tarifa Habla + 850MB</string>
    <string name="planinfo_5cents_detail">
    <![CDATA[
	<ul>
		<li class="detalles">Internet m&oacute;vil de <span style="color:#ff5900">850MB</span></li>
		<li class="detalles">8,46&euro; de m&iacute;nimo para gastar en llamadas! (a 2 minutos por llamada, con 1/3 de llamadas a simyos, tienes para 60 minutos! 1 hora!)</li>
		<li class="detalles"><span style="color:#ff5900">0 cent/min (los primeros 10 min de cada llamada)</span> entre n&uacute;meros simyo y <span style="color:#ff5900">6,05 cent/min</span> llamadas al resto de m&oacute;viles y fijos nacionales</li>
		<li class="detalles"><span style="color:#ff5900">18,15 cent</span> establecimiento de llamada</li>
		<li class="detalles"><span style="color:#ff5900">10,89 cent/SMS</span> mensaje de texto nacional</li>
		<li class="detalles"><span style="color:#ff5900">35,09 cent/MMS</span> mensaje multimedia nacional</li>
		<li class="detalles">Sin compromiso de permanencia</li>
		<li class="detalles">Precios IVA incluido</li>
	</ul>
    ]]>
    </string>
    <string name="planinfo_2cents">Tarifa Habla + 700MB</string>
    <string name="planinfo_2cents_detail">
    <![CDATA[
	<ul>
		<li class="detalles"><span style="color:#ff5900">4,83 cent/min</span> llamadas a m&oacute;viles y fijos nacionales</li>
		<li class="detalles"><span style="color:#ff5900">18,15 cent</span> establecimiento de llamada</li>
		<li class="detalles"><span style="color:#ff5900">Internet m&oacute;vil Incluido</span> (700MB/mes, luego a 3,63cent/MB)</li>
		<li class="detalles"><span style="color:#ff5900">10,89 cent/SMS</span> mensaje de texto nacional</li>
		<li class="detalles"><span style="color:#ff5900">47,19 cent/MMS</span> mensaje multimedia nacional</li>
		<li class="detalles">5,93&euro;/mes de Cuota mensual</li>
		<li class="detalles">Sin compromiso de permanencia</li>
		<li class="detalles">Precios IVA incluido</li>
	</ul>
    ]]>
    </string>
    <string name="planinfo_0_6cents">Tarifa Habla + 200MB</string>
    <string name="planinfo_0_6cents_detail">
    <![CDATA[
	<ul>
		<li class="detalles">Internet m&oacute;vil de <span style="color:#ff5900">200MB</span></li>
		<li class="detalles">4,83&euro; de m&iacute;nimo para gastar en llamadas! (a 2 minutos por llamada, con 1/3 de llamadas a simyos, tienes para 35 minutos!)</li>
		<li class="detalles"><span style="color:#ff5900">0 cent/min (los primeros 10 minutos de cada llamada)</span> entre n&uacute;meros de simyo y <span style="color:#ff5900">6,05 cent/min</span> llamadas al resto de m&oacute;viles y fijos nacionales</li>
		<li class="detalles"><span style="color:#ff5900">18,15 cent</span> establecimiento de llamada</li>
		<li class="detalles"><span style="color:#ff5900">10,89 cent/SMS</span> mensaje de texto nacional</li>
		<li class="detalles"><span style="color:#ff5900">47,19 cent/MMS</span> mensaje multimedia nacional</li>
		<li class="detalles">Sin compromiso de permanencia</li>
		<li class="detalles">Precios IVA incluido</li>
	</ul>
    ]]>
    </string>
    
    <string name="planinfo_detail_call">Llama gratis y contrátala</string>
    <string name="planinfo_detail_web">Entra en simyo.es</string>
    	
    <string name="settings_billingday">Día inicio facturación</string>
    <string name="settings_taxes">Importes con impuestos</string>
    <string name="settings_vat_ipsi_melilla">Melilla (IPSI 4)</string>
    <string name="settings_vat_igic_canarias">Canarias (IGIC 7)</string>
    <string name="settings_vat_ipsi_ceuta">Ceuta (IPSI 10)</string>
    <string name="settings_vat_peninsula_baleares">Península y Baleares (IVA 21)</string>
    <string-array name="settings_vat">
        <item>@string/settings_vat_ipsi_melilla</item>
        <item>@string/settings_vat_igic_canarias</item>
        <item>@string/settings_vat_ipsi_ceuta</item>
        <item>@string/settings_vat_peninsula_baleares</item>
    </string-array>
    <string-array name="settings_vat_value">
        <item>4</item>
        <item>7</item>
        <item>10</item>
        <item>21</item>
    </string-array>
    <string name="settings_vat_vat">IVA incluido</string>
    
    <string name="stats_title">Estadísticas historial</string>
    <string name="stats_missed_calls">Llamadas perdidas</string>
    <string name="stats_answered_calls">Llamadas contestadas</string>
    <string name="stats_inbound_calls">Llamadas entrantes</string>
    <string name="stats_outbound_calls">Llamadas salientes</string>
    <string name="stats_inbound_seconds">Duración llamadas entrantes</string>
    <string name="stats_outbound_seconds">Duración llamadas salientes</string>
    <string name="stats_total_calls">Total de llamadas</string>
    <string name="stats_shortest_call">Llamada más corta</string>
    <string name="stats_longest_call">Llamada más larga</string>
    <string name="stats_average_call">Tiempo medio llamada</string>
    <string name="stats_menu_general_data">Datos generales</string>
    <string name="stats_menu_top_caller_calls">Números más llamados (cantidad)</string>
    <string name="stats_menu_top_caller_duration">Números más llamados (tiempo)</string>

    <string name="disclaimer">Condiciones de uso</string>
	<string name="disclaimer_ok_button">Aceptar</string>
    <string name="disclaimer_text">
    <![CDATA[
	<span style="color:#ff5900">Encoge tu factura</span> es una aplicaci&oacute;n gratuita y de c&oacute;digo abierto ofrecida por <span style="color:#ff5900">simyo</span>.
	<br/><br/>Los c&aacute;lculos de tarificaci&oacute;n se realizan lo m&aacute;s verazmente posible, en base a los datos de llamadas y SMS registrados en el terminal en el que est&aacute; instalada.
	<br/><br/>Los MBs de datos consumidos solamente pueden contarse a partir de la instalaci&oacute;n de la aplicaci&oacute;n.
	<br/><br/><span style="color:#ff5900">simyo</span> no se hace responsable de la posible inexactitud de los datos mostrados.
	<br/><br/>Ninguno de los datos registrados en el terminal ni de los c&aacute;lculos presentados es transferido fuera del terminal.
	<br/><br/>El uso de esta aplicaci&oacute;n implica la aceptaci&oacute;n expresa de lo anteriormente expuesto.
    ]]>
    </string>

    <string name="appdetail_title">¿Cómo calculamos?</string>
    <string name="appdetail_text">
    <![CDATA[
	Con esta aplicaci&oacute;n podr&aacute;s hacerte una idea aproximada de lo barato que resulta <span style="color:#ff5900">simyo</span> pero tambi&eacute;n debes tener en cuenta que:    
    <ul>
	<li>Esta aplicaci&oacute;n es de car&aacute;cter meramente informativo y no vinculante.</li>
	<li>El consumo indicado se calcula de forma aproximada con la informaci&oacute;n recogida en tu terminal, pudiendo haber discrepancias con la informaci&oacute;n proporcionada por los sistemas de tu actual operador.</li>
	<li>La tarificaci&oacute;n de numeraci&oacute;n adicional, internacionales, roaming, ... puede presentar discrepancias.</li>
	<li>Los importes mostrados incluyen los paquetes completos de datos correspondientes a cada tarifa, aunque el consumo de datos mostrado solamente comienza a recogerse a partir de la instalaci&oacute;n de la aplicaci&oacute;n</li>
	<li>No hemos tenido en cuenta el ahorro que podr&aacute;s obtener por las llamadas entre simyos, as&iacute; que si eliges una tarifa con llamadas a 0 cts entre simyos, algo de ahorro adicional podr&aacute;s obtener.</li>
	<li>Asegura configurar correctamente el d&iacute;a de inicio del ciclo de facturaci&oacute;n.</li>
	<li><span style="color:#ff5900">simyo</span> no recoge, trata ni almacena los datos de tu terminal utilizados por esta aplicaci&oacute;n.</li>
	</ul>
	O lo que es lo mismo, se trata de un c&aacute;lculo aproximado, no te lo tomes "a pies juntillas" ;)<br/>
	M&aacute;s informaci&oacute;n en <a href="https://play.google.com/store/apps/details?id=es.simyo.encogetufactura">Google Play</a>
    ]]>
    </string>

</resources>